# csv_processing

./: Readme.md  main.py  pyproject.toml  requirements.txt
src/: aggregate.py  filter.py  sorting.py  utils.py
tests/: test_aggregate.py  test_filter.py  test_sorting.py  test_utils.py
